sysconfig/iptables
#generated by bin/iptables_generator.pl.
#iptables-save, service iptables save, or manual overwrites will be lost
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [907:651194]
:ccagent - [0:0]
:icmp - [0:0]
:netbackup - [0:0]
:ntpd - [0:0]
:snmpd - [0:0]
:sshd - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.0/255.0.0.0 ! -i lo -j DROP
-A INPUT -p tcp -m tcp --dport 8063 -j ccagent
-A INPUT -p icmp -j icmp 
-A INPUT -p tcp -m tcp -m multiport --dports 13724,13782,1556,1557,35202 -j netbackup
-A INPUT -p udp -m udp --dport 123 -j ntpd
-A INPUT -p tcp -m tcp --dport 199 -j snmpd 
-A INPUT -p udp -m udp --dport 161 -j snmpd 
-A INPUT -p tcp -m tcp --dport 22 -j sshd 
-A INPUT -j DROP
-A ccagent -j LOG --log-prefix "dropped_ccagent_ips: " 
-A ccagent -j DROP 
-A icmp -p icmp -m icmp --icmp-type 13 -j DROP 
-A icmp -p icmp -m icmp --icmp-type 14 -j DROP 
-A icmp -j REJECT --reject-with icmp-host-prohibited 
-A netbackup -j LOG --log-prefix "dropped_netbackup_ips: " 
-A netbackup -j DROP 
-A ntpd -j LOG --log-prefix "dropped_ntpd_ips: " 
-A ntpd -j DROP 
-A snmpd -j LOG --log-prefix "dropped_snmpd_ips: " 
-A snmpd -j DROP 
-A sshd -j DROP
COMMIT
